--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 .login-body{
     background-image: url(/img/Ew201O2UYAMyJO7.png);
     background-color: bisque;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .login-h1{
     color: brown;
@@ -40,6 +44,8 @@
     background-image: url(/img/chiikawa20210108_2.jpg.webp);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: top;
 }
 .register-h1{
     color: rgb(107, 122, 189);
@@ -65,19 +71,25 @@
     width: 100px;
 }
 
-/*----------------------------------blog_list画面css-------------------------------*/
+/*----------------------------------blog_共通css-------------------------------*/
+
+li{
+    list-style-type: none;
+}
 .logo{
     background-color: antiquewhite;
 }
-.logout{
+.logo-list{
     position: absolute;
     top: 5px;
     right: 3%;
     color: brown;
     list-style-type: none;
-
+    display: flex;
+    gap: 50px;
 }
 h2{
+    padding-bottom: 10px;
     color: brown;
     text-align: center;
     width: 100%;
@@ -85,28 +97,108 @@ h2{
     top: 50px;
     margin-bottom: 50px;
 }
-.blog-register{
+.blog-bottom-img{
+    text-align: center;
+    border: solid antiquewhite;
+    background-color: antiquewhite;
+}
+.blog-footer{
+    width: 100%;
+    color: brown;
+    background-color: antiquewhite;
+    text-align: center;
+    margin: 0 auto;
+}
+.enter-btn{
+    width: 100px;
+    margin-bottom: 10px;
+    padding: 5px;
+    background-color: rgb(138, 236, 39);
+    border: 0;
+    border-radius: 5px;
+}
+.back-btn{
+    width: 100px;
+    margin-bottom: 10px;
+    padding: 5px;
+    background-color: #eb6100;
+    border: 0;
+    border-radius: 5px;
+}
+.delete-btn{
+    width: 100px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 5px;
+    background-color:deeppink;
+    border: 0;
+    border-radius: 5px;
+}
+
+/*----------------------------------blog_list画面css-------------------------------*/
+.blog-list-register{
     text-align: center;
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 100px;
 }
-.blog-register-btn{
+.blog-list-register-btn{
     color: #fff;
     background-color: #eb6100;
     padding: 0.5rem 1rem;
     border: solid 1px black;
     border-radius: 5px;
 }
-.blog-list-img{
+.blog-list-backBtn{
     text-align: center;
-    border: solid antiquewhite;
-    background-color: antiquewhite;
 }
-.blog-list-footer{
-    width: 100%;
+/*----------------------------------blog_register画面css-------------------------------*/
+
+.blog-register-icon{
     color: brown;
-    background-color: antiquewhite;
+    display: inline-block;
     text-align: center;
-    margin: 0 auto;
+}
+.blog-register-details{
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.blog-register-title{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+.blog-register-date{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-bottom: 20px;
+}
+.blog-register-uploadImg{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+.blog-register-content{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+textarea{
+    padding: 10px 10px;
+    width: 215px;
+}
+.blog-register-btn{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+/*----------------------------------blog_editor画面css-------------------------------*/
+
+.blog-delete-btn{
+    text-align: center;
 }
