--- a/BlogSystem/src/main/resources/templates/blog_list.html
+++ b/BlogSystem/src/main/resources/templates/blog_list.html
@@ -12,7 +12,7 @@
             <a href=""><img th:src="@{/img/logo.png}" alt=""></a>
         </div>
         <ul class="logo-list">
-			<li>ようこそ！</li>
+			<li>ようこそ!</li>
 			<li th:text="${adminName}"></li>
             <li><a th:href="@{/blog/list}">ブログ一覧</a></li>
             <li><a th:href="@{/admin/logout}">ログアウト</a></li>
